fix(HelpModal): avoid flickering with x-cloak

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,3 +12,5 @@
 @import './prose.css';
 @import './utilities.css';
 @import './callout.css';
+
+[x-cloak] { display: none !important; }
